test/classes/errors/newValueNotType.compopts
--legacy-classes --ignore-errors-for-pass
